--- a/index.html
+++ b/index.html
@@ -14,5 +14,5 @@
 <body>
 <div id="root" style="height: 100%"></div>
 <div id="modal-root"></div>
-</body>
+<script type="text/javascript" src="/app.js"></script></body>
 </html>
